apps/base/qui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qui
spec:
  ingressClassName: traefik
  rules:
    - host: qui.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qui
                port:
                  name: http
