apps/base/qui/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qui-route
  namespace: qui
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - qui.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qui
          port: 7476
